--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body{
 .container{
     width: 65%;
     height: auto;
-    background: white;
+    background:#FAEBD7;
     margin:auto;
     margin-top: 5px;
     padding-bottom: 5px;
