--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background: #e6e6e6;
+    background: #E9967A;
     padding: 0;
     margin:0;
     
